--- a/Shoe Collector/Info.plist
+++ b/Shoe Collector/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Need to access your photos to add photo to collection</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Need to access camera to take photos for collection</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
